--- a/ui/weightDialog.ui
+++ b/ui/weightDialog.ui
@@ -75,7 +75,7 @@
     <rect>
      <x>50</x>
      <y>50</y>
-     <width>115</width>
+     <width>70</width>
      <height>30</height>
     </rect>
    </property>
@@ -84,6 +84,35 @@
    </property>
    <property name="placeholderText">
     <string notr="true" extracomment="0.0">0.0</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="unitsBox">
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>50</y>
+     <width>45</width>
+     <height>30</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="warningLabel">
+   <property name="geometry">
+    <rect>
+     <x>185</x>
+     <y>240</y>
+     <width>204</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Oops! You need to input a weight.</string>
+   </property>
+   <property name="indent">
+    <number>-1</number>
+   </property>
+   <property name="textInteractionFlags">
+    <set>Qt::NoTextInteraction</set>
    </property>
   </widget>
  </widget>
