--- a/ui/weightDialog.ui
+++ b/ui/weightDialog.ui
@@ -83,7 +83,7 @@
     <string/>
    </property>
    <property name="placeholderText">
-    <string notr="true" extracomment="0.0">0.0</string>
+    <string notr="true" extracomment="0.0"/>
    </property>
   </widget>
   <widget class="QComboBox" name="unitsBox">
@@ -113,6 +113,32 @@
    </property>
    <property name="textInteractionFlags">
     <set>Qt::NoTextInteraction</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="weightLabel">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>30</y>
+     <width>53</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Weight</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="dateLabel">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>30</y>
+     <width>53</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Date</string>
    </property>
   </widget>
  </widget>
