--- a/ui/mainWindow.ui
+++ b/ui/mainWindow.ui
@@ -23,7 +23,7 @@
       <height>121</height>
      </rect>
     </property>
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
+    <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="sessionBtn">
        <property name="text">
@@ -116,7 +116,7 @@
    <widget class="QDateEdit" name="startDateEdit">
     <property name="geometry">
      <rect>
-      <x>110</x>
+      <x>100</x>
       <y>270</y>
       <width>110</width>
       <height>30</height>
@@ -129,7 +129,7 @@
    <widget class="QDateEdit" name="endDateEdit">
     <property name="geometry">
      <rect>
-      <x>370</x>
+      <x>250</x>
       <y>270</y>
       <width>110</width>
       <height>30</height>
@@ -142,7 +142,7 @@
    <widget class="QLabel" name="startLabel">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>125</x>
       <y>250</y>
       <width>61</width>
       <height>16</height>
@@ -152,10 +152,10 @@
      <string>Start Date</string>
     </property>
    </widget>
-   <widget class="QLabel" name="startLabel_2">
+   <widget class="QLabel" name="endLabel">
     <property name="geometry">
      <rect>
-      <x>400</x>
+      <x>275</x>
       <y>250</y>
       <width>61</width>
       <height>16</height>
@@ -163,6 +163,19 @@
     </property>
     <property name="text">
      <string>End Date</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="resetBtn">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>270</y>
+      <width>110</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Reset Dates</string>
     </property>
    </widget>
   </widget>
